<resources>
    <string name="app_name">MyFirstAndroidApp</string>
    <string name="my_profile_image">my profile image</string>
    <string name="my_name">Breno Silva Brito</string>
    <string name="career"><![CDATA[<Full Stack Developer>]]></string>
    <string name="copyright">© Copyright Breno Brito 2022</string>
    <string name="build_with_android_studio">Build with Android Studio</string>
    <string name="aboutMySkills">\u0009\u0009 In a addition to be a student at Dorset college, I have also been doing courses at Udemy and CodeWithMosh in order to learn more and more, and after two years studying science in computing, I have learnt how to create websites coding with HTML,CSS, and JavaScript, I have also learnt how to create programs with C#,and Java, how to create databases with MySQL, and How to use GIT,GitHub, and Linux CLI.</string>
    <string name="myStory">\u0009 Hey there, my name is Breno Silva Brito, I am a computer science student at Dorset College, I am 24 years old Brazilian man seeking for challenges and more knowledge…</string>
    <string name="about_my_skills">\u0009\u0009 Throughout this 2 years studying computer science I have learnt so many things, and I would say the thing I like the most is coding, I love Java however I love even more C#, I also like Front-End, but I am not really good at it so I decided to focus on the Back-End, which is also really difficult, but it is nice to see and create things through codes, also doing things using CLI such as linux, git and also command prompt is quite handy so I am also focusing on learn it even more.</string>
    <string name="about_my_hobbies">\t\t Whenever I am not coding or studying I am probably not at home unless I am gaming...I love being outside, travelling, hanging out with friends, playing some sports, or even cycling somewhere I can be more close to the nature, mountains, lakes, beaches...</string>
    <string name="about_my_achievements">\t\t I have so many dreams to accomplish that it is sometimes hard to think about the ones I have already fulfilled, but I am definitely really prided of myself for deciding to live abroad when I was only 17 years old, however I only came to Ireland when I was already 21, but it was definetily one of the best things I have done, after that I could also travel to so many places, and of course being in college now studying science in computing also makes me really happy, and I would be delighted by the time I find a job as a back-end developer.</string>
</resources>