<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context=".SkillsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_baseline_add_task_24" />

            <TextView
                android:id="@+id/myAchiements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="Achiements"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/js" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/html" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/css" />

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/AboutMySkills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="20dp"
                android:text="@string/aboutMySkills"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginHorizontal="10dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/copyRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/copyright"
                    android:textColor="#808080"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.8" />

                <TextView
                    android:id="@+id/buildWith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/build_with_android_studio"
                    android:textColor="#808080"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/copyRight"
                    app:layout_constraintVertical_bias="0.9" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hobbiesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Hobbies"
            android:background="@drawable/custom_buttons"/>

        <Button
            android:id="@+id/homeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Home"
            android:background="@drawable/custom_buttons"/>

        <Button
            android:id="@+id/educationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Education"
            android:background="@drawable/custom_buttons"/>

    </LinearLayout>

</LinearLayout>