<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green_100"
    tools:context=".EducationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green_200"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/eduIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            app:srcCompat="@drawable/ic_baseline_edu_24" />

        <TextView
            android:id="@+id/eduActName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:padding="5dp"
            android:text="Education"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/exitIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="#3d6666"
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context=".EducationActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_baseline_cast_for_education_24" />

            <TextView
                android:id="@+id/myEducation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="Education"
                android:padding="5dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#3d6666"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_gravity="center"
                android:background="@drawable/round_element"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            app:srcCompat="@drawable/dorset" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:srcCompat="@drawable/codewithmosh" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:srcCompat="@drawable/udemy" />

                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/AboutMySkills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:padding="20dp"
                    android:text="@string/aboutMySkills"
                    android:textSize="16sp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/copyRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/copyright"
                    android:textColor="#808080"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.8" />

                <TextView
                    android:id="@+id/buildWith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/build_with_android_studio"
                    android:textColor="#808080"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/copyRight"
                    app:layout_constraintVertical_bias="0.9" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/achievementsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/custom_buttons"
            android:text="Achievements"
            android:textSize="10dp" />

        <Button
            android:id="@+id/homeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/custom_buttons"
            android:text="Home" />

        <Button
            android:id="@+id/skillsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/custom_buttons"
            android:text="Skills" />

    </LinearLayout>

</LinearLayout>