<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_img">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3d6666"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/skiIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            app:srcCompat="@drawable/ic_baseline_ski_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:padding="5dp"
            android:text="Skills"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/exitIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="#3d6666"
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context=".SkillsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_baseline_psychology_24" />

            <TextView
                android:id="@+id/mySkills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="Skills"
                android:padding="5dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#3d6666"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/round_element">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:srcCompat="@drawable/js" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/html" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/css" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/mysql" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/csharp" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/java" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/git" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/github" />

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/AboutMySkills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="20dp"
                android:text="@string/about_my_skills"
                android:textSize="16sp"
                android:layout_marginHorizontal="10dp"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/copyRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/copyright"
                    android:textColor="#808080"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.8" />

                <TextView
                    android:id="@+id/buildWith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/build_with_android_studio"
                    android:textColor="#808080"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/copyRight"
                    app:layout_constraintVertical_bias="0.9" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/educationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Education"
            android:background="@drawable/custom_buttons"/>

        <Button
            android:id="@+id/homeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Home"
            android:background="@drawable/custom_buttons"/>

        <Button
            android:id="@+id/hobbiesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Hobbies"
            android:background="@drawable/custom_buttons"/>

    </LinearLayout>

</LinearLayout>